@@ -1,3 +1,7 @@
+2009-01-12 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSTextStorage.m: Change to use new GC finalization API.
+
 2009-01-12 10:25-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Source/GSNibLoading.m: More documentation.
